--- a/Modeling.qmd
+++ b/Modeling.qmd
@@ -141,7 +141,7 @@ Now that the training and test sets have been created, some models can be fit.
 
 ## Logistic Regression
 
-The three models will first be fit using logistic regression. Simply stated, logistic regression calculates the probability of an event occurring based on a data set and uses this information for classification. The event is binary, so refers to yes/no or success/failure. Logistic regression is a generalized linear model that works by linking the response to a function linear in parameters using the logit function, which is the log odds of the event occurring. Since the goal is to use the Diabetes Health Indicators Datadset to predict whether an individual has prediabetes/diabetes or not, logistic regression is appropriate to use.
+The three models will first be fit using logistic regression. Simply stated, logistic regression calculates the probability of an event occurring based on a data set and uses this information for classification. The event is binary, so refers to yes/no or success/failure. Logistic regression is a generalized linear model that works by linking the response to a function linear in parameters using the logit function, which is the log odds of the event occurring. Since the goal is to use the Diabetes Health Indicators Dataset to predict whether an individual has prediabetes/diabetes or not, logistic regression is appropriate to use.
 
 For fitting logistic regression in caret, we need to specify the method as glm, although there are other options available. Since our response is binary, the family is "binomial". Since we want to use log loss, we need to specify this as the metric in train() as well as in the trainControl() using summaryFunction (mnLogLoss). Since log loss uses predicted probabilities to evaluate model performance, classProbs needs to be set at TRUE. For the model fits presented here, trainControl will use cross validation as the method ("cv") and 5 folds (number).
 
@@ -642,4 +642,4 @@ rf_confusion
 
 ## Conclusion
 
-Overall, the logistic regression model using all 21 predictor variables is the best model using log loss as a metric, with a log loss of 0.318. The classification trees produced a higher log loss of 0.357. The random forest model resulted in infinity log loss using the "rf" method and a log loss of 0.322 for "ranger". The log loss of infinity indicates that the model's predictions are unreliable due to extreme probability estimates. The "rf" model did have higher sensitivity compared to all of the other models, but practically speaking, if understanding the likelihood of an outcome is important, choosing a model that gives more accurate probabilities is preferred. Looking at confusion matrices provided more information about the ability of the models to accurately predict the prediabetic/diabetic minority class. When the models predicted non-diabetics, those predictions were correct around 87% of the time. In contrast, the prediabetic/diabetic class predictions were correct 49-62% of the time, with the percentage of actual prediabetic/diabetic cases correctly identified by the models in the range of only 6-20%. These results are not unexpected given that the data is imbalanced. There are options to help balance the classes, such as undersampling and oversampling, that could improve predictions. These options are available in caret in trainControl(). Weights can also be used, which are available in the randomForest package and can be used for some methods in caret as well.
+Overall, the logistic regression model using all 21 predictor variables is the best model using log loss as a metric, with a log loss of 0.318. The classification trees produced a higher log loss of 0.357. The random forest model resulted in infinity log loss using the "rf" method and a log loss of 0.322 for "ranger". The log loss of infinity indicates that the model's predictions are unreliable due to extreme probability estimates. Looking at confusion matrices provided more information about the ability of the models to accurately predict the prediabetic/diabetic minority class. When the models predicted non-diabetics, those predictions were correct around 87% of the time. In contrast, the prediabetic/diabetic class predictions were correct 49-62% of the time, with the percentage of actual prediabetic/diabetic cases correctly identified by the models in the range of only 6-20%. These results are not unexpected given that the data is imbalanced. There are options to help balance the classes, such as undersampling and oversampling, that could improve predictions. These options are available in caret in trainControl(). Weights can also be used, which are available in the randomForest package and can be used for some methods in caret as well.
